<!--
  ~ Copyright (C) 2015 Drakeet <drakeet.me@gmail.com>
  ~
  ~ This file is part of Meizhi
  ~
  ~ Meizhi is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Meizhi is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Meizhi.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">妹纸&amp;gank.io</string>

    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_gank">GankActivity</string>

    <!--action-->
    <string name="action_subject">今日肥皂家话题</string>
    <string name="action_github_login">登录 GitHub 帐号</string>
    <string name="action_github_trending">今日 GitHub 热门</string>
    <string name="action_share">分享</string>
    <string name="action_refresh">刷新</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_open_url">打开链接</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">可爱的「关于」页面</string>

    <!--tip-->
    <string name="tip_video_play">这其实是个网页浏览器，需要你手动点击页面中的视频进行播放。魅族用户可以上滑 home 键来返回竖屏页面</string>
    <string name="tip_login_github">妹纸 App 并无帐号系统，这个菜单只是提前登录保留 cookies，以便于之后进 GitHub 页面 star 项目</string>
    <string name="tip_guide">指引: 点击卡片的标题文字，可以打开干货页面 :)</string>
    <string name="tip_for_no_gank">今天编辑们休息哦，没有干货提供！\n如果想在此处展示您的作品，请联系 drakeet.</string>
    <string
        name="tip_empty_gank">今日は肥皂家がない、干物の供給がない...\n今天编辑们休息哦，没有干货提供！\n如果想在此处展示您的优秀作品，请联系 drakeet.\n\n如果你喜欢我开发的应用，\n你还可以试试同样用心的 App：\n\n纯纯打码 http://fir.im/puremosaic\n验证码助手 http://fir.im/codehelper\n贝壳单词 http://fir.im/seashell</string>
    <string name="tip_open_fail">打开失败，没有找到可以打开该链接的其它应用 :(</string>
    <string name="tip_copy_done">复制成功</string>
    <string name="tip_picture_save_fail">图片保存失败，请再次尝试保存！</string>

    <!--url-->
    <string name="url_login_github">https://github.com/login</string>
    <string name="url_github_trending">https://github.com/trending</string>
    <string name="url_gank_io">http://gank.io/</string>
    <string name="blog_drakeet">http://drakeet.me</string>
    <string name="api">http://gank.io/</string>

    <string name="about">关于</string>
    <string name="introduce">每天一张精选妹纸图、一个精选小视频（视频源地址播放），一篇程序猿精选干货。(主页中点击妹纸打开妹纸大图，点击文字打开干货页面)\n\n数据内容来源于代码家的 http://gank.io ，drakeet 完成 Android 端的开发和设计，并且也非常感谢 曹俊跃、echodjb、iamwent 参与贡献了代码。\n\n相较 1.0 版本，代码几乎全部重构，RxJava &amp; Retrofit 框架等等，极力地追求优雅和低耗资源。\n\n我的 GitHub: https://github.com/drakeet\n\n完全开源，最佳的源代码，最佳的学习软件，如果你觉得不错，可以帮忙分享给你更多的朋友，这是我们最大的动力和支持，或者请我喝一杯咖啡（所谓的捐赠或打赏QAQ），非常感谢！\n\n支付宝：drakeet@qq.com （长按可选中复制）\n\n另外，如果喜欢你也可以下载我开发的其它应用：纯纯打码，验证码助手，贝壳单词...</string>
    <string name="share">分享给朋友（谢谢QAQ）</string>
    <string name="share_text">发现了一款非常美观的App「妹纸&amp;gank.io」，每天一张精选妹纸图、一个精选小视频（视频源地址播放），一篇程序猿干货，完全开源不收费，太赞了! 推荐~：http://fir.im/mengmeizhi </string>
    <string name="app_name_with_introduce">妹纸&amp;gank.io - 程序猿的骄傲和喜悦</string>
    <string name="developers">开发人员</string>
    <string name="developer_contributor">Android Contributor</string>
    <string name="developer_and_designer">主要 Android 开发 &amp; 设计</string>
    <string name="developer_service">主要服务端开发</string>
    <string name="open_source_lis">用到的开源库（后续会补充协议）</string>
    <string name="introduce_and_help">介绍与帮助</string>

    <string name="no_data_the_day">今天没有妹纸</string>
    <string name="loading_num_of">正在加载：</string>
    <string name="heads_up_title">妹纸.gank.io</string>
    <string name="heads_up_content">今天的妹纸已经准备好了，快来享用吧~</string>
    <string name="ask_saving_picture">保存到手机?</string>
    <string name="picture_has_save_to">图片已保存至 %s 文件夹</string>

    <string name="no_video_found">No video found.</string>
    <string name="open_source_libraries_list">LiteOrm\nheadsupcompat\nsmooth-app-bar-layout\ncom.android.support:appcompat-v7:22.2.1\ncom.android.support:recyclerview-v7:22.2.1\ncom.squareup.picasso:picasso:2.5.2\ncom.android.support:design:22.2.1\ncom.github.chrisbanes.photoview:library:1.2.3\ncom.daimajia.numberprogressbar:library:1.2@aar\ncom.umeng.analytics:analytics:latest.integration\ncom.squareup.retrofit:retrofit:1.9.0\nio.reactivex:rxandroid:1.0.0\ncom.squareup.okhttp:okhttp-urlconnection:2.0.0\ncom.squareup.okhttp:okhttp:2.0.0\ncom.jakewharton:butterknife:7.0.1\ncom.squareup:otto:1.3.8\ncom.github.bumptech.glide:glide:3.6.1"</string>
    <string name="share_from"><![CDATA[" - from「妹纸&gank.io」http://fir.im/mengmeizhi"]]></string>

    <string name="loading">加载中...</string>
    <string name="snap_load_fail">加载失败，请重试</string>
    <string name="retry">重试</string>
    <string name="i_know">知道了</string>
    <string name="action_notifiable">每天中午提醒</string>
    <string name="notifiable_on">已经开启提醒</string>
    <string name="notifiable_off">已经关闭提醒</string>
    <string name="share_meizhi_to">分享妹纸到...</string>

</resources>
