<!--
  ~ Copyright (C) 2015 Drakeet <drakeet.me@gmail.com>
  ~
  ~ This file is part of Meizhi
  ~
  ~ Meizhi is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Meizhi is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Meizhi.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.drakeet.meizhi.ui.GankActivity">
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@mipmap/ic_share_white_24dp"/>

    <item
        android:id="@+id/action_login"
        android:title="@string/action_github_login"
        android:orderInCategory="99"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_subject"
        android:title="@string/action_subject"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
