<!--
  ~ Copyright (C) 2015 Drakeet <drakeet.me@gmail.com>
  ~
  ~ This file is part of Meizhi
  ~
  ~ Meizhi is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Meizhi is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Meizhi.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_header_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitleStyle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/about_header_height"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/about_header_background">

                <ImageView
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_marginTop="24dp"
                    android:src="@mipmap/ic_meizhi_150602"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/app_name_with_introduce"/>

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:text="Version 1.2.3"/>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/about_card_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textColor="@color/md_grey_600"
                android:text="@string/introduce_and_help"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/bg_card_nopic">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_800"
                    android:text="@string/introduce"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/md_grey_500"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/md_grey_600"
                android:text="@string/developers"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card_nopic">

                <ImageView
                    android:id="@+id/ig_avatar_drakeet"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_margin="16dp"
                    android:src="@mipmap/avatar_drakeet"/>

                <TextView
                    android:id="@+id/drakeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ig_avatar_drakeet"
                    android:layout_toEndOf="@id/ig_avatar_drakeet"
                    android:layout_alignTop="@id/ig_avatar_drakeet"
                    tools:ignore="HardcodedText"
                    android:textColor="@color/md_grey_800"
                    android:text="drakeet"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/drakeet"
                    android:layout_toRightOf="@id/ig_avatar_drakeet"
                    android:layout_toEndOf="@id/ig_avatar_drakeet"
                    android:textColor="@color/md_grey_600"
                    android:text="@string/developer_and_designer"/>

                <ImageView
                    android:id="@+id/ig_avatar_daimajia"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:layout_below="@id/ig_avatar_drakeet"
                    android:layout_margin="16dp"
                    android:src="@mipmap/avatar_daimajia"/>

                <TextView
                    android:id="@+id/daimajia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ig_avatar_daimajia"
                    android:layout_toEndOf="@id/ig_avatar_daimajia"
                    android:layout_alignTop="@id/ig_avatar_daimajia"
                    tools:ignore="HardcodedText"
                    android:textColor="@color/md_grey_800"
                    android:text="daimajia"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/daimajia"
                    android:layout_toRightOf="@id/ig_avatar_daimajia"
                    android:paddingBottom="16dp"
                    android:textColor="@color/md_grey_600"
                    android:text="@string/developer_service"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="12dp"
                android:background="@color/md_grey_500"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/md_grey_600"
                android:text="@string/open_source_lis"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:background="@drawable/bg_card_nopic">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/open_source_lis_text_size"
                    tools:ignore="HardcodedText"
                    android:textColor="@color/md_grey_600"
                    android:text="@string/open_source_libraries_list"/>

            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
